--- a/flavour_wave/package.json
+++ b/flavour_wave/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.5",
+    "@motionone/utils": "^10.16.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
