--- a/flavour_wave/package.json
+++ b/flavour_wave/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^5.13.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
