--- a/flavour_wave/package.json
+++ b/flavour_wave/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "pigeon-maps": "^0.21.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.1.0",
