--- a/flavour_wave/package.json
+++ b/flavour_wave/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.1",
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
@@ -39,6 +41,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.1",
+    "stripe": "^14.8.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
