--- a/flavour_wave_internal/composer.json
+++ b/flavour_wave_internal/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.2",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
